syntax = "proto3";

package user_command;

option go_package = "./";

service UserCommandService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {}
}

message RegisterUserRequest {
  string userName = 1;
  string password = 2;
  string email = 3;
}

message RegisterUserResponse {
  int32 status = 1;
  repeated string error = 2;
  string data = 3;
}

